tests/valid/RecordDefine_Valid_1.wys
type point is {int y, int x}

function f(point x) => point:
    return x

function main() => void:
    point p = f({x: 1, y: 1})
    print p

