tests/errors/Parser/ParserDuplicateToken.wys
type record is {
	int x,
	int x
}